--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tailwindcss/forms": "^0.5.0",
     "next": "12.1.1",
     "react": "^18.0.0-rc.3",
-    "react-dom": "^18.0.0-rc.3"
+    "react-dom": "^18.0.0-rc.3",
+    "react-hook-form": "^7.29.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
