--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@prisma/client": "^3.11.1",
+    "@sendgrid/mail": "^7.6.2",
     "@tailwindcss/forms": "^0.5.0",
+    "iron-session": "^6.1.2",
     "next": "12.1.1",
     "react": "^18.0.0-rc.3",
     "react-dom": "^18.0.0-rc.3",
-    "react-hook-form": "^7.29.0"
+    "react-hook-form": "^7.29.0",
+    "twilio": "^3.76.0"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
