--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.0.0-rc.3",
     "react-dom": "^18.0.0-rc.3",
     "react-hook-form": "^7.29.0",
+    "swr": "^1.2.2",
     "twilio": "^3.76.0"
   },
   "devDependencies": {
