--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.0.0-rc.3",
     "react-hook-form": "^7.29.0",
     "swr": "^1.2.2",
+    "ts-node": "^10.7.0",
     "twilio": "^3.76.0"
   },
   "devDependencies": {
@@ -31,5 +32,8 @@
     "prisma": "^3.11.1",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.3"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
